[gd_scene load_steps=2 format=2]

[ext_resource path="res://player_controller/Camera_addon.gd" type="Script" id=1]

[node name="Camera_addon" type="Node3D"]
script = ExtResource( 1 )

[node name="bob_pivot" type="Node3D" parent="."]

[node name="lean_pivot" type="Node3D" parent="bob_pivot"]

[node name="rotation_helper_point" type="Node3D" parent="bob_pivot/lean_pivot"]

[node name="crouch_point" type="Node3D" parent="bob_pivot/lean_pivot/rotation_helper_point"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )

[node name="crawl_point" type="Node3D" parent="bob_pivot/lean_pivot/rotation_helper_point"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0 )

[node name="camera_root" type="Node3D" parent="bob_pivot/lean_pivot/rotation_helper_point"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )

[node name="Camera3D" type="Camera3D" parent="bob_pivot/lean_pivot/rotation_helper_point/camera_root"]
current = true
far = 200.0

[node name="ray_lean" type="RayCast3D" parent="bob_pivot"]
enabled = true
target_position = Vector3( 1, 0, 0 )

[node name="ray_crouch_point_R" type="RayCast3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, -0.3 )
enabled = true
target_position = Vector3( 0, 0.4, 0 )

[node name="ray_crouch_point_L" type="RayCast3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0, -0.3 )
enabled = true
target_position = Vector3( 0, 0.4, 0 )

[node name="Tween_fov" type="Tween" parent="."]
